--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
    <body>
       <head>
-         <title>HTML Forms</title>
+         <title>Simple ASP Website Example</title>
       </head>
-      <p>Add your details:</p>
       <form>
-         Student Name:<br> <input type="text" name="name">
+         Your question:<br> <input type="text" name="Q">
          <br>
-         Student Subject:<br> <input type="text" name="subject">
-         <br>
-         Rank:<br> <input type="text" name="rank">
+         Answer:<br> <input type="text" name="A">
+ 
       </form>
    </body>
 </html>
