--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
-<div class="container">
-  <h1>Ask a Question</h1>
-  <button id="voice-input-btn"><i class="fa fa-microphone"></i></button>
-  <input type="text" id="text-input" placeholder="Type your question...">
-  <p id="processing-msg" class="hidden">Processing your question...</p>
-  <p id="answer" class="hidden"></p>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Simple ASP Website</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    
+    <div class="container">
+    <h1>Ask a Question</h1>
+    <button id="voice-input-btn"><i class="fa fa-microphone"></i></button>
+    <input type="text" id="text-input" placeholder="Type your question...">
+    <p id="processing-msg" class="hidden">Processing your question...</p>
+    <p id="answer" class="hidden"></p>
+   </div>
+
+    <script src="script.js"></script>
+  </body>
+</html>
+
+
+
 
