--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title>Simple ASP Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     
     <div class="container">
     <h1>Ask a Question</h1>
-    <button id="voice-input-btn"><i class="fa fa-microphone"></i></button>
+    <button id="voice-input-btn"><i class="fa fa-microphone-slash"></i></button>
     <input type="text" id="text-input" placeholder="Type your question...">
     <p id="processing-msg" class="hidden">Processing your question...</p>
     <p id="answer" class="hidden"></p>
