--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   <body>
     
     <div class="container">
-    <h1>Ask a Question</h1>
-    <button id="voice-input-btn"><i class="fa fa-microphone-slash"></i></button>
-    <input type="text" id="text-input" placeholder="Type your question...">
-    <p id="processing-msg" class="hidden">Processing your question...</p>
-    <p id="answer" class="hidden"></p>
-   </div>
+  <h1>Ask a Question</h1>
+  <button id="voice-input-btn"><i class="fa fa-microphone"></i></button>
+  <input type="text" id="text-input" placeholder="Type your question...">
+  <p id="processing-msg" class="hidden">Processing your question...</p>
+  <div id="answer-box" class="hidden">
+    <h2>Answer:</h2>
+    <p id="answer"></p>
+  </div>
+  </div>
+
 
     <script src="script.js"></script>
   </body>
