--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Simple ASP Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="style.css">
+    <script src="fuzzyset.js"></script>
   </head>
   <body>
     
