--- a/index.html
+++ b/index.html
@@ -8,11 +8,75 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="libs/fuzzyset.js"></script>
-  </head>
-  <body>
-    <h1>Ask a question or say something...</h1>
-    <p id="userText"></p>
-    <p id="botText"></p>
+  
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			background-color: #f4f4f4;
+		}
+		.container {
+			margin: 0 auto;
+			max-width: 800px;
+			padding: 20px;
+			background-color: #fff;
+			box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
+			border-radius: 10px;
+			margin-top: 50px;
+		}
+		h1 {
+			text-align: center;
+			margin-top: 0;
+			margin-bottom: 20px;
+		}
+		.answer {
+			margin-top: 20px;
+			padding: 10px;
+			background-color: #f7f7f7;
+			border-radius: 5px;
+			box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+			line-height: 1.5;
+		}
+		#voice-input-btn {
+			background-color: #4CAF50;
+			border: none;
+			color: white;
+			padding: 15px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 16px;
+			margin: 4px 2px;
+			cursor: pointer;
+			border-radius: 50%;
+			position: absolute;
+			top: 20px;
+			right: 120px;
+		}
+		#text-input {
+			padding: 15px;
+			width: 60%;
+			border-radius: 5px;
+			border: none;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			font-size: 16px;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<h1>Ask a Question</h1>
+		<div>
+			<button id="voice-input-btn"><i class="fa fa-microphone"></i></button>
+			<input type="text" id="text-input" placeholder="Type your question...">
+			<button id="submit-btn">Submit</button>
+		</div>
+		<div class="answer-container">
+			<div id="answer"></div>
+		</div>
+	</div>
+
+  // code for question answering functionality
     <script>
       window.SpeechRecognition = window.webkitSpeechRecognition || window.SpeechRecognition;
       const recognition = new SpeechRecognition();
