--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     recognition.lang = 'en-US';
 
     // Get DOM elements
-    const answerDiv = document.getElementById('answer');
+    const answerDiv = document.querySelector('#answer');
     const voiceBtn = document.getElementById('voice-input-btn');
     const textInput = document.getElementById('text-input');
 
@@ -85,4 +85,3 @@
   </script>
 </body>
 </html>
-
