--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       fetch(url)
         .then(response => response.json())
         .then(data => {
+        console.log(data); // log data to the console
           const answer = data.Answer || data.AbstractText || 'Sorry, I could not find an answer.';
           answerDiv.innerHTML = answer;
         })
