--- a/index.html
+++ b/index.html
@@ -58,35 +58,38 @@
           return;
         }
 
-        // Handle speech recognition
-        recognition.onresult = event => {
-          const resultIndex = event.resultIndex;
-          const transcript = event.results[resultIndex][0].transcript;
-          textInput.value = transcript;
-        };
+       // Handle speech recognition
+      recognition.onresult = event => {
+        const resultIndex = event.resultIndex;
+        const transcript = event.results[resultIndex][0].transcript;
+        textInput.value = transcript;
+        getAnswer(transcript);
+      };
 
-        // Handle click on voice input button
-        voiceBtn.addEventListener('click', () => {
-          recognition.start();
-        });
 
+     // Handle click on voice input button
+      voiceBtn.addEventListener('click', () => {
+        recognition.start();
+      });
+
+ 
+        function getAnswer(question) {
         // Call API to get answer
-  const url = `https://api.duckduckgo.com/?q=${question}&format=json`;
-  // Fetch data from the API
-  fetch(url)
-    .then(response => response.json())
-    .then(data => {
-      // Set a constant answer
-      const answer = "The answer is 2.";
-      // Display the answer in the answer box
-      const answerDiv = document.createElement('div');
-      answerDiv.innerHTML = answer;
-      answerBox.innerHTML = '';
-      answerBox.appendChild(answerDiv);
-    })
-    .catch(() => {
-      answerBox.innerHTML = 'Sorry, something went wrong.';
-    });
+        const url = `https://api.duckduckgo.com/?q=${question}&format=json`;
+        fetch(url)
+          .then(response => response.json())
+          .then(data => {
+            const answer = data.Answer || data.AbstractText || 'Sorry, I could not find an answer.';
+            answerDiv.innerHTML = answer;
+          
+          console.log(answer)
+          
+          })
+          .catch(() => {
+            answerDiv.innerHTML = 'Sorry, something went wrong.';
+          });
+}
+
     </script>
   </body>
 </html>
