--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           console.log(data)
 
                 // Expected response : answer sets
-                $.post("http://wave.ttu.edu", data, function (response) {
+                $.post("https://wave.ttu.edu/ajax.php", data, function (response) {
                     console.log(response);
                     var html = document.createElement("html");
                     html.innerHTML = response;
