--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     
     <script src="fuzzyset.js"></script>
+    
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <style>
       #voice-input-btn {
