--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           console.log(data)
 
                 // Expected response : answer sets
-                $.post("http://127.0.0.1/ajax.php?url=http://wave.ttu.edu/", data, function (response) {
+                $.post("http://wave.ttu.edu/", data, function (response) {
                   
                   
                     console.log(response);
