--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           console.log(data)
 
           
-          $.post("http://localhost/ajax.php", { url: "http://wave.ttu.edu/" , data}, function (response) {
+          $.post("http://localhost/ajax.php", { url: "http://wave.ttu.edu/" , data:data}, function (response) {
                 // Expected response : answer sets
                 //$.post("http://localhost/ajax.php", data, function (response) {
                   
