--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           
           //$.post("http://localhost/ajax.php", { url: "http://wave.ttu.edu/" , data:data}, function (response) {
                 // Expected response : answer sets
-                $.post("http://localhost/ajax.php", data, function (response) {
+                $.post("http://localhost/ajax/ajax.php", data, function (response) {
                 //$.post("http://localhost/ajaxtest.php", function (response) {  
                   
                     console.log(response);
